--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -743,8 +743,13 @@ a:hover {
   margin-bottom: 80px;
 }
 
-@media (min-width: 768px) {
-
+@media (max-width: 1000px) {
+  .contact-img{
+    width: 200px;
+    height: 200px;
+    padding-right: 40px;
+    margin-bottom: 80px;
+  }
 }
 /*--------------------------------------------------------------
 # Portfolio
